feat: add navbar with menu

--- a/src/config/templates/base.html
+++ b/src/config/templates/base.html
@@ -6,6 +6,9 @@
   <title>Quorum App</title>
 </head>
 <body>
+  <nav>
+    {% include "includes/navbar.html" %}
+  </nav>
   <main>
     {% block main %}{% endblock %}
   </main>
