--- a/src/config/templates/includes/navbar.html
+++ b/src/config/templates/includes/navbar.html
@@ -1,6 +1,9 @@
 <p>Quorum App</p>
 <ul>
   <li>
+    <a href="{% url 'index' %}">Home</a>
+  </li>
+  <li>
     <a href="{% url 'bill_vote_result' %}">Bills votes</a>
   </li>
   <li>
