feat: add Legislator detail view

--- a/src/congress/templates/congress/index.html
+++ b/src/congress/templates/congress/index.html
@@ -9,7 +9,9 @@
   <ul>
     {% for l in legislators %}
       <li>
-        {{ l.name }}
+        <a href="{% url 'legislator_detail' l.slug %}">
+          {{ l.name }}
+        </a>
       </li>
     {% endfor %}
   </ul>
