feat: add Uninformed to bill without sponsor

--- a/src/congress/templates/congress/bill_detail.html
+++ b/src/congress/templates/congress/bill_detail.html
@@ -7,6 +7,8 @@
   <li>Origin: {{ bill.get_origin_display }}</li>
   {% if bill.sponsor %}
     <li>Sponsor: {{ bill.sponsor }}</li>
+  {% else %}
+    <li>Sponsor: Uninformed</li>
   {% endif %}
 </ul>
 
