feat: shows the bills that the legislator voted on

--- a/src/congress/templates/congress/legislator_detail.html
+++ b/src/congress/templates/congress/legislator_detail.html
@@ -9,4 +9,22 @@
   <li>District: {{ legislator.district }}</li>
 </ul>
 
+<table>
+  <thead>
+    <th>Supporters</th>
+    <th>Opposers</th>
+  </thead>
+  <tbody>
+    {% for supported, opposed in votes %}
+      <tr>
+        <td>
+          {{ supported }}
+        </td>
+        <td>{{ opposed }}</td>
+      </tr>
+    {% endfor %}
+
+  </tbody>
+</table>
+
 {% endblock %}
