feat: shows the legislators who voted for the bill

--- a/src/congress/templates/congress/bill_detail.html
+++ b/src/congress/templates/congress/bill_detail.html
@@ -12,4 +12,20 @@
   {% endif %}
 </ul>
 
+<table>
+  <thead>
+    <th>Supporters</th>
+    <th>Opposers</th>
+  </thead>
+  <tbody>
+    {% for supported, opposed in legislators %}
+      <tr>
+        <td>{{ supported }}</td>
+        <td>{{ opposed }}</td>
+      </tr>
+    {% endfor %}
+
+  </tbody>
+</table>
+
 {% endblock %}
