feat: add LegislatorFilter

--- a/src/config/templates/includes/navbar.html
+++ b/src/config/templates/includes/navbar.html
@@ -9,4 +9,7 @@
   <li>
     <a href="{% url 'legislator_vote_result' %}">Legislators votes</a>
   </li>
+  <li>
+    <a href="{% url 'legislator_list' %}">Legislators</a>
+  </li>
 </ul>
