feat: add BillFilter

--- a/src/config/templates/includes/navbar.html
+++ b/src/config/templates/includes/navbar.html
@@ -12,4 +12,7 @@
   <li>
     <a href="{% url 'legislator_list' %}">Legislators</a>
   </li>
+  <li>
+    <a href="{% url 'bill_list' %}">Bills</a>
+  </li>
 </ul>
