--- a/src/congress/templates/congress/bill_vote_result.html
+++ b/src/congress/templates/congress/bill_vote_result.html
@@ -2,44 +2,51 @@
 
 {% block main %}
 <h1>Summary of Bill votes</h1>
-<a href="{% url 'bill_vote_result' %}">New search</a>
 
-<form action="{% url 'bill_vote_result' %}" method="get">
-  {{ form.as_p }}
-  <input type="submit" value="Submit">
-</form>
+<section>
+  <a class="new-search" href="{% url 'bill_vote_result' %}">New search</a>
 
-<h2>Result</h2>
+  <form action="{% url 'bill_vote_result' %}" method="get">
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
+  </form>
 
-<table>
-  <thead>
-    <th>Bill</th>
-    <th>Supporters</th>
-    <th>Opposers</th>
-    <th>Primary Sponsor</th>
-  </thead>
-  <tbody>
-    {% for bill in bills %}
-      <tr>
-        <td>
-          <a href="{% url 'bill_detail' bill.slug %}">
-            {{ bill.title }}
-          </a>
-        </td>
-        <td>{{ bill.supported_votes }}</td>
-        <td>{{ bill.opposed_votes }}</td>
-        {% if bill.sponsor__name %}
-          <td>
-            <a href="{% url 'legislator_detail' bill.sponsor__slug %}">
-              {{ bill.sponsor__name }}
-            </a>
-          </td>
-        {% else %}
-          <td>Uninformed</td>
-        {% endif %}
-      </tr>
-    {% endfor %}
-  </tbody>
-</table>
+  <div class="table-component">
+    <h2>Result</h2>
+
+    <table>
+      <thead>
+        <th>Bill</th>
+        <th>Supporters</th>
+        <th>Opposers</th>
+        <th>Primary Sponsor</th>
+      </thead>
+      <tbody>
+        {% for bill in bills %}
+          <tr>
+            <td>
+              <a href="{% url 'bill_detail' bill.slug %}">
+                {{ bill.title }}
+              </a>
+            </td>
+            <td>{{ bill.supported_votes }}</td>
+            <td>{{ bill.opposed_votes }}</td>
+            {% if bill.sponsor__name %}
+              <td>
+                <a href="{% url 'legislator_detail' bill.sponsor__slug %}">
+                  {{ bill.sponsor__name }}
+                </a>
+              </td>
+            {% else %}
+              <td>Uninformed</td>
+            {% endif %}
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
+  </div>
+
+</section>
 
 {% endblock %}
