--- a/src/congress/templates/congress/legislator_vote_result.html
+++ b/src/congress/templates/congress/legislator_vote_result.html
@@ -2,34 +2,40 @@
 
 {% block main %}
 <h1>Summary of Legislators votes</h1>
-<a href="{% url 'legislator_vote_result' %}">New search</a>
 
-<form action="{% url 'legislator_vote_result' %}" method="get">
-  {{ form.as_p }}
-  <input type="submit" value="Submit">
-</form>
+<section>
+  <a class="new-search" href="{% url 'legislator_vote_result' %}">New search</a>
 
-<h2>Result</h2>
+  <form action="{% url 'legislator_vote_result' %}" method="get">
+    {{ form.as_p }}
+    <input type="submit" value="Submit">
+  </form>
 
-<table>
-  <thead>
-    <th>Legislator</th>
-    <th>Supported bills</th>
-    <th>Opposed bills</th>
-  </thead>
-  <tbody>
-    {% for legislator in legislators %}
-      <tr>
-        <td>
-          <a href="{% url 'legislator_detail' legislator.slug %}">
-            {{ legislator.name }}
-          </a>
-        </td>
-        <td>{{ legislator.supported_votes }}</td>
-        <td>{{ legislator.opposed_votes }}</td>
-      </tr>
-    {% endfor %}
-  </tbody>
-</table>
+  <div class="table-component">
+    <h2>Result</h2>
+
+    <table>
+      <thead>
+        <th>Legislator</th>
+        <th>Supported bills</th>
+        <th>Opposed bills</th>
+      </thead>
+      <tbody>
+        {% for legislator in legislators %}
+          <tr>
+            <td>
+              <a href="{% url 'legislator_detail' legislator.slug %}">
+                {{ legislator.name }}
+              </a>
+            </td>
+            <td>{{ legislator.supported_votes }}</td>
+            <td>{{ legislator.opposed_votes }}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+
+</section>
 
 {% endblock %}
